# first_snap3

./: CMakeLists_old.txt  CMakeLists_old2.txt  snapcraft.yaml
src/: CMakeLists.txt  code.cpp
src/files/include/opencv2/: cvconfig.h
